--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react4xp-runtime-client",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "description": "React4xp helper: Webpack setup for building React4xp's client-side wrapper",
     "main": "webpack.config.js",
     "files": [
@@ -9,11 +9,10 @@
         "README.md"
     ],
     "scripts": {
-        "clean": "npm run cleanRaw && npm run cleanWebpack",
-        "cleanRaw": "rimraf ./react4xpClient.es6",
-        "cleanWebpack": "rimraf ./webpack.config.js",
+        "clean": "rimraf ./react4xpClient.es6 && rimraf ./webpack.config.js && rimraf build && rimraf test/output",
         "copy": "copyfiles --flat src/*.* .",
-        "prepublish": "npm run clean && npm run copy",
+        "test": "npm run clean && node_modules/webpack-cli/bin/cli.js --config src/webpack.config.js --env.BUILD_R4X=$(pwd)/test/output --env.LIBRARY_NAME=React4xp --env.CHUNK_CONTENTHASH=9 --env.CLIENT_CHUNKS_FILENAME=chunky.json",
+        "prepublish": "npm run test && npm run clean && npm run copy",
         "postpublish": "npm run clean"
     },
     "repository": {
@@ -27,7 +26,10 @@
     },
     "homepage": "https://github.com/enonic/react4xp-runtime-client",
     "dependencies": {
-        "chunks-2-json-webpack-plugin": "^1.0.0"
+        "@babel/polyfill": "^7.2.5",
+        "chunks-2-json-webpack-plugin": "^1.0.0",
+        "fetch-timeout": "0.0.2",
+        "node-fetch": "^2.3.0"
     },
     "peerDependencies": {
         "babel-cli": "^6.0.0",
