--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react4xp-runtime-client",
-    "version": "0.1.2",
+    "version": "0.1.8",
     "description": "React4xp helper: Webpack setup for building React4xp's client-side wrapper",
     "main": "webpack.config.js",
     "files": [
@@ -45,8 +45,15 @@
         "webpack-cli": "^3.2.0"
     },
     "devDependencies": {
+        "babel-core": "^6.26.3",
+        "babel-loader": "^7.1.5",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
+        "babel-register": "^6.26.0",
         "copyfiles": "^2.0.0",
-        "rimraf": "^2.0.0"
+        "rimraf": "^2.0.0",
+        "webpack": "^4.29.6",
+        "webpack-cli": "^3.2.3"
     },
     "babel": {
         "presets": [
