--- a/.eslintrc
+++ b/.eslintrc
@@ -10,11 +10,10 @@
   "parserOptions": {
     "ecmaFeatures": {
       "experimentalObjectRestSpread": true,
-      "jsx": true
+      "jsx": false
     },
     "sourceType": "module"
   },
-  "plugins": ["react"],
   "rules": {
     "eol-last": ["error"],
     "indent": ["error", 4, {"SwitchCase": 1}],
@@ -27,9 +26,6 @@
     "max-len": ["error", 140],
     "space-infix-ops": ["error", {"int32Hint": true}],
     "space-before-function-paren": ["error", { "anonymous": "always", "named": "never"}],
-    "operator-linebreak": ["error", "after"],
-    "react/jsx-uses-vars": [1],      // avoid no-unused-vars for imports used as react components
-    "react/jsx-uses-react": [1],     // avoid no-unused-vars for importing React
-    "react/react-in-jsx-scope": [1]  // make sure React is in scope when writing jsx
+    "operator-linebreak": ["error", "after"]
   }
 }
