--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react4xp-runtime-client",
-    "version": "0.1.9",
+    "version": "0.2.0",
     "description": "React4xp helper: Webpack setup for building React4xp's client-side wrapper",
     "main": "webpack.config.js",
     "files": [
@@ -34,11 +34,11 @@
     "peerDependencies": {
         "babel-cli": "^6.0.0",
         "babel-core": "^6.0.0",
-        "babel-eslint": "^7.0.0",
+        "babel-eslint": "^7.2.0",
         "babel-loader": "^7.1.5",
         "babel-polyfill": "^6.26.0",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-stage-0": "^6.24.1",
+        "babel-preset-es2015": "^6.24.0",
+        "babel-preset-stage-0": "^6.24.0",
         "babel-register": "^6.26.0",
         "react-dom": "^16.0.0",
         "webpack": "^4.29.0",
@@ -47,11 +47,13 @@
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
+        "babel-eslint": "^7.2.3",
         "babel-loader": "^7.1.5",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
         "babel-register": "^6.26.0",
         "copyfiles": "^2.0.0",
+        "eslint": "^5.15.3",
         "rimraf": "^2.0.0",
         "webpack": "^4.29.6",
         "webpack-cli": "^3.2.3"
