--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react4xp-runtime-client",
-    "version": "0.2.5",
+    "version": "0.3.0",
     "description": "React4xp helper: Webpack setup for building React4xp's client-side wrapper",
     "main": "webpack.config.js",
     "files": [
@@ -20,7 +20,7 @@
         "url": "git+https://github.com/enonic/react4xp-runtime-client"
     },
     "author": "Espen Norderud",
-    "license": "MIT",
+    "license": "Apache-2.0",
     "bugs": {
         "url": "https://github.com/enonic/react4xp-runtime-client/issues"
     },
