--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react4xp-runtime-client",
-    "version": "0.3.1",
+    "version": "0.3.2",
     "description": "React4xp helper: Webpack setup for building React4xp's client-side wrapper",
     "main": "webpack.config.js",
     "files": [
@@ -12,7 +12,7 @@
     "scripts": {
         "clean": "rimraf ./react4xpClient.es6 && rimraf ./webpack.config.js && rimraf build && rimraf test/output",
         "copy": "copyfiles --flat src/*.* .",
-        "test": "npm run clean && node_modules/webpack-cli/bin/cli.js --config src/webpack.config.js --env.BUILD_R4X=$(pwd)/test/output --env.LIBRARY_NAME=React4xp --env.CHUNK_CONTENTHASH=9 --env.CLIENT_CHUNKS_FILENAME=chunky.json --env.SERVICE_ROOT_URL=/test/url",
+        "test": "npm run clean && node_modules/webpack-cli/bin/cli.js --config src/webpack.config.js --env.BUILD_R4X=$(pwd)/test/output --env.LIBRARY_NAME=React4xp --env.CHUNK_CONTENTHASH=9 --env.CLIENT_CHUNKS_FILENAME=chunky.json",
         "prepublish": "npm run test && npm run clean && npm run copy",
         "postpublish": "npm run clean"
     },
@@ -44,7 +44,7 @@
         "react-dom": "^16.0.0",
         "webpack": "^4.29.0",
         "webpack-cli": "^3.2.0",
-        "react4xp-buildconstants": "^0.7.1"
+        "react4xp-buildconstants": "^0.7.4"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
