--- a/package.json
+++ b/package.json
@@ -33,26 +33,23 @@
         "node-fetch": "^2.3.0"
     },
     "peerDependencies": {
-        "babel-cli": "^6.0.0",
-        "babel-core": "^6.0.0",
-        "babel-eslint": "^7.2.0",
-        "babel-loader": "^7.1.5",
-        "babel-polyfill": "^6.26.0",
-        "babel-preset-es2015": "^6.24.0",
-        "babel-preset-stage-0": "^6.24.0",
-        "babel-register": "^6.26.0",
-        "react-dom": "^16.0.0",
-        "webpack": "^4.29.0",
-        "webpack-cli": "^3.2.0",
+        "@babel/cli": "^7",
+        "@babel/core": "^7",
+        "babel-loader": "^8",
+        "babel-polyfill": "*",
+        "@babel/preset-env": "^7",
+        "@babel/register": "*",
+        "react-dom": "*",
+        "webpack": "^4",
+        "webpack-cli": "^3",
         "react4xp-buildconstants": "^0.7.4"
     },
     "devDependencies": {
-        "babel-core": "^6.26.3",
-        "babel-eslint": "^7.2.3",
-        "babel-loader": "^7.1.5",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-stage-0": "^6.24.1",
-        "babel-register": "^6.26.0",
+        "@babel/cli": "^7.7.7",
+        "@babel/core": "^7.7.7",
+        "@babel/preset-env": "^7.7.7",
+        "@babel/register": "^7.7.7",
+        "babel-loader": "^8.0.6",
         "copyfiles": "^2.0.0",
         "eslint": "^5.15.3",
         "rimraf": "^2.0.0",
@@ -61,11 +58,7 @@
     },
     "babel": {
         "presets": [
-            "es2015",
-            "stage-0"
-        ],
-        "plugins": [
-            "transform-object-rest-spread"
+            "@babel/preset-env"
         ]
     }
 }
