Babel presets and plugins

--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     "peerDependencies": {
         "@babel/cli": "^7",
         "@babel/core": "^7",
+        "@babel/plugin-proposal-object-rest-spread": "^7",
+        "@babel/plugin-transform-arrow-functions": "^7",
+        "@babel/preset-env": "^7",
+        "@babel/preset-react": "^7",
         "babel-loader": "^8",
         "babel-polyfill": "*",
-        "@babel/preset-env": "^7",
         "@babel/register": "*",
         "react-dom": "*",
         "webpack": "^4",
@@ -47,7 +50,10 @@
     "devDependencies": {
         "@babel/cli": "^7.7.7",
         "@babel/core": "^7.7.7",
+        "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
+        "@babel/plugin-transform-arrow-functions": "^7.7.4",
         "@babel/preset-env": "^7.7.7",
+        "@babel/preset-react": "^7.7.4",
         "@babel/register": "^7.7.7",
         "babel-loader": "^8.0.6",
         "copyfiles": "^2.0.0",
