--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react4xp-runtime-client",
-    "version": "0.3.2",
+    "version": "0.4.0",
     "description": "React4xp helper: Webpack setup for building React4xp's client-side wrapper",
     "main": "webpack.config.js",
     "files": [
@@ -33,26 +33,29 @@
         "node-fetch": "^2.3.0"
     },
     "peerDependencies": {
-        "babel-cli": "^6.0.0",
-        "babel-core": "^6.0.0",
-        "babel-eslint": "^7.2.0",
-        "babel-loader": "^7.1.5",
-        "babel-polyfill": "^6.26.0",
-        "babel-preset-es2015": "^6.24.0",
-        "babel-preset-stage-0": "^6.24.0",
-        "babel-register": "^6.26.0",
-        "react-dom": "^16.0.0",
-        "webpack": "^4.29.0",
-        "webpack-cli": "^3.2.0",
+        "@babel/cli": "^7",
+        "@babel/core": "^7",
+        "@babel/plugin-proposal-object-rest-spread": "^7",
+        "@babel/plugin-transform-arrow-functions": "^7",
+        "@babel/preset-env": "^7",
+        "@babel/preset-react": "^7",
+        "babel-loader": "^8",
+        "babel-polyfill": "*",
+        "@babel/register": "*",
+        "react-dom": "*",
+        "webpack": "^4",
+        "webpack-cli": "^3",
         "react4xp-buildconstants": "^0.7.4"
     },
     "devDependencies": {
-        "babel-core": "^6.26.3",
-        "babel-eslint": "^7.2.3",
-        "babel-loader": "^7.1.5",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-stage-0": "^6.24.1",
-        "babel-register": "^6.26.0",
+        "@babel/cli": "^7.7.7",
+        "@babel/core": "^7.7.7",
+        "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
+        "@babel/plugin-transform-arrow-functions": "^7.7.4",
+        "@babel/preset-env": "^7.7.7",
+        "@babel/preset-react": "^7.7.4",
+        "@babel/register": "^7.7.7",
+        "babel-loader": "^8.0.6",
         "copyfiles": "^2.0.0",
         "eslint": "^5.15.3",
         "rimraf": "^2.0.0",
@@ -61,11 +64,7 @@
     },
     "babel": {
         "presets": [
-            "es2015",
-            "stage-0"
-        ],
-        "plugins": [
-            "transform-object-rest-spread"
+            "@babel/preset-env"
         ]
     }
 }
