--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "copy": "copyfiles --flat src/*.* .",
         "test": "npm run clean && node_modules/webpack-cli/bin/cli.js --config src/webpack.config.js --env.BUILD_R4X=$(pwd)/test/output --env.LIBRARY_NAME=React4xp --env.CHUNK_CONTENTHASH=9 --env.CLIENT_CHUNKS_FILENAME=chunky.json",
         "prepublish": "npm run test && npm run clean && npm run copy",
-        "postpublish": "npm run clean"
+        "postpublish": "npm run clean",
+        "local": "npm run clean && npm run copy"
     },
     "repository": {
         "type": "git",
